# example-scripts

./: .cursorignore  .gitignore  AGENTS.md  AnalysisAndTips.ipynb  Cross_Validation_and_Model_Optimization.ipynb  Introduction to Numerai.html  Introduction to Numerai.ipynb  LICENSE.txt  README.md  SignalsScoringExample.ipynb  Working_with_Numerai_data_and_SKLearn.ipynb  analysis_and_tips.ipynb  bayesian-statistics.ipynb  dev-requirements.txt  era_boosting_example.ipynb  example_classifier.py  example_classifier.r  example_model.ipynb  example_model.py  example_model.r  example_model_advanced.py  example_model_simple.py  example_model_sunshine.py  example_model_v2.py  example_model_v3.py  example_numerox.py  export_pickle.py  feature_neutralization.ipynb  hello_numerai.ipynb  making-your-first-submission-on-numerai.ipynb  model_upload.ipynb  numerox_example.py  parameter_optimization_with_era_subsets.ipynb  requirements.in  requirements.txt  setup.py  target_ensemble.ipynb  utils.py
agents/: AGENTS.md  agent_base_model.py  build_full_datasets.py  numerai_cv.py  numerai_metrics.py  plan.md  show_experiment.py  summarize_results.py
agents/tests/: __init__.py  (+1 more)
cached-pickles/: feature_neutralization.pkl
cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  constants.h  dataset.h  example.cc  model.h  timer.h  utils.h
crypto/: example_model.ipynb
numerai/: AGENTS.md  example_model.ipynb  feature_neutralization.ipynb  hello_numerai.ipynb  target_ensemble.ipynb
signals/: example_model.ipynb  example_model.py
tests/: __init__.py  test_config_layout.py
(+215 files in other folders)
